add method notebooks delete, add docs, add test
